--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==3.2"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+channels = "*"
 
 [dev-packages]
 
