Blood donation request using WebSockets
* backend setup for socket based comm.

* donation_request structure modified

* Donation app model, serializer, views, urls created for data Persistance

* pipfile issue resolved

* Integrating Signals

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "==3.2"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+channels = "*"
+channels-redis = "*"
 
 [dev-packages]
 
