--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 channels = "*"
 channels-redis = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
