--- a/tox.ini
+++ b/tox.ini
@@ -15,4 +15,4 @@ whitelist_externals =
     rm
     touch
 commands =
-    pipenv run pylint haemosupport accounts donation healthprofile manage.py
+    pipenv run pylint haemosupport accounts donation healthprofile manage.py --ignore migrations __init__.py
