again added pipenv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - "**"
 
+
 jobs:
   run_tests:
     name: Tests
@@ -14,20 +15,26 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        python-version: ["3.9"]
+        python-version: ['3.9']
         toxenv: [django32-drflatest, quality]
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+        - uses: actions/checkout@v1
+        - name: Set up Python 3.9
+          uses: actions/setup-python@v2
+          with:
+            python-version: 3.9
+        - name: Install pipenv
+          run: pip install pipenv
 
-      - name: Install Dependencies
-        run: pip install pytest tox pylint
+        - name: Install Dependencies
+          run: pipenv install
+        
+        - name: Install Dev Dependencies
+          run: pipenv install --dev
 
-      - name: Run Quality Checks
-        env:
-          TOXENV: ${{ matrix.toxenv }}
-        run: tox
+        - name: Run Quality Checks
+          env:
+            TOXENV: ${{ matrix.toxenv }}
+          run: pipenv run tox
+
