--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ deps =
     drflatest: djangorestframework
     pytest==6.2.4
 commands =
-    python -Wd -m pytest {posargs}
+    pipenv run python -Wd -m pytest {posargs}
 
 [testenv:quality]
 commands =
-    pylint haemosupport accounts donation healthprofile manage.py --ignore migrations __init__.py
+    pipenv run pylint haemosupport accounts donation healthprofile manage.py --ignore migrations __init__.py
