misc changes, adding pylintrc

--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,4 @@ commands =
 
 [testenv:quality]
 commands =
-    pipenv run pylint haemosupport accounts donation healthprofile manage.py --ignore migrations __init__.py
+    pipenv run pylint haemosupport accounts donation healthprofile manage.py --ignore migrations
