--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,9 @@
 [tox]
-envlist = py39-django{32}-drf{latest}
-
+envlist = py39-django{31,32}
 [testenv]
 deps =
+    django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
-    drflatest: djangorestframework
-    pytest==6.2.4
 commands =
     pipenv run python -Wd -m pytest {posargs}
 
