--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ deps =
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
 commands =
-    pipenv run python -Wd -m pytest {posargs}
+    pipenv run pytest {posargs}
 
 [testenv:quality]
 commands =
