--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,24 @@ version: "3.9"
 services:
   db:
     image: postgres
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=haemoUser
       - POSTGRES_PASSWORD=Aht123786
-      - POSTGRES_DB=docker_tests
+      - POSTGRES_DB=haemoSupport
+  redis:
+    image: redis:alpine
 
   web:
-    build: .
-    command: "python manage.py runserver 0.0.0.0:8000"
-    volumes:
-      - .:/haemo_support_backend
+    image: 156926091891.dkr.ecr.us-west-2.amazonaws.com/haemo-support-backend:latest
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     env_file:
       - ./env.txt
     depends_on:
-      - db
+      db:
+        condition: service_started
+      redis:
+        condition: service_started
