--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     image: redis:alpine
 
   web:
-    image: 156926091891.dkr.ecr.us-west-2.amazonaws.com/haemo-support-backend:latest
+    build: .
     command: >
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
