changes related to tox and docker compose for celery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,30 @@ services:
   redis:
     image: redis:alpine
 
+  celery:
+    build: .
+    command: sh -c "celery -A haemosupport worker -l info"
+    env_file:
+      - ./env.txt
+    depends_on:
+      db:
+        condition: service_started
+      redis:
+        condition: service_started
+  celery-beat:
+    build: .
+    env_file:
+      - ./env.txt
+    command: sh -c "celery -A haemosupport beat -l info"
+    depends_on:
+      db:
+        condition: service_started
+      redis:
+        condition: service_started
+
   web:
-    image: 156926091891.dkr.ecr.us-west-2.amazonaws.com/haemo-support-backend:latest
+    # image: 156926091891.dkr.ecr.us-west-2.amazonaws.com/haemo-support-backend:latest
+    build: .
     command: >
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
