--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py39-django{31,32}
+envlist = py39-django{31,32}-celery50
 [testenv]
 deps =
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    celery50: celery>=5.0,<6.0
 commands =
     pipenv run pytest {posargs}
 
