--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ django-filter = "*"
 sendgrid = "*"
 twilio = "==6.4.0"
 awsebcli = "*"
+celery = "*"
+redis = "*"
+flower = "*"
 
 [dev-packages]
 pytest = "*"
